force-app/main/default/objects/leankor__ResourceAssignment__c/leankor__ResourceAssignment__c.object-meta.xml
<CustomObject>
    <description>This stores the assigned resources to an activity.</description>
    <label>Resource Assignment</label>
    <nameField>
        <displayFormat>RES-{0000000000}</displayFormat>
        <label>Resource Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>