force-app/main/default/objects/leankor__ResourceAssignment__c/fields/leankor__AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>leankor__AssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Resource_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>