force-app/main/default/objects/leankor__ResourceAssignment__c/fields/leankor__CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>leankor__CompletedDate__c</fullName>
    <description>Capture RA completed date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CompletedDate</label>
    <type>DateTime</type>
</CustomField>