force-app/main/default/objects/leankor__ResourceAssignment__c/fields/leankor__ExpenseCategory__c.field-meta.xml
<CustomField>
    <fullName>leankor__ExpenseCategory__c</fullName>
    <label>Expense Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leankor__ExpenseCategory</valueSetName>
    </valueSet>
</CustomField>