force-app/main/default/objects/leankor__ResourceAssignment__c/fields/leankor__KanbanCard__c.field-meta.xml
<CustomField>
    <fullName>leankor__KanbanCard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <referenceTo>leankor__KanbanCard__c</referenceTo>
    <relationshipLabel>Resource Assignments</relationshipLabel>
    <relationshipName>ResourceAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>