force-app/main/default/objects/leankor__ResourceAssignment__c/fields/leankor__PercentAllocation__c.field-meta.xml
<CustomField>
    <fullName>leankor__PercentAllocation__c</fullName>
    <label>Percent Allocation</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>