force-app/main/default/objects/leankor__ResourceAssignment__c/fields/leankor__ProjectFinancial__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectFinancial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated project financial account.</description>
    <label>Project Financial</label>
    <referenceTo>leankor__ProjectFinancial__c</referenceTo>
    <relationshipLabel>Resource Assignments</relationshipLabel>
    <relationshipName>ResourceAssignments_ProjectFinancial</relationshipName>
    <type>Lookup</type>
</CustomField>