force-app/main/default/objects/leankor__ResourceAssignment__c/fields/leankor__Quantity__c.field-meta.xml
<CustomField>
    <fullName>leankor__Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The number of assigned resources.</description>
    <label>Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>