force-app/main/default/objects/leankor__ResourceAssignment__c/listViews/leankor__All.listView-meta.xml
<ListView>
    <fullName>leankor__All</fullName>
    <columns>leankor__AssignedTo__c</columns>
    <columns>leankor__KanbanCard__c</columns>
    <columns>leankor__PercentAllocation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>